--- a/po/fi.po
+++ b/po/fi.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: XFCE4\n"
-"POT-Creation-Date: 2003-04-13 23:15+0200\n"
+"POT-Creation-Date: 2003-04-18 23:12+0200\n"
 "PO-Revision-Date: 2003-02-09 16:40+0200\n"
 "Last-Translator: Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,7 +15,31 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: panel/controls.c:265 panel/controls_dialog.c:349
+#: panel/xfce_support.c:644
+msgid "Select file"
+msgstr "Valitse tiedosto"
+
+#: panel/controls_dialog.c:256
+msgid "Change item"
+msgstr "Muuta osaa"
+
+#: panel/controls_dialog.c:266 panel/item_dialog.c:916
+msgid "_Revert"
+msgstr "P_alauta"
+
+#: panel/controls_dialog.c:271 panel/item_dialog.c:922
+msgid "_Done"
+msgstr "_Valmis"
+
+#: panel/controls_dialog.c:294
+msgid "Type:"
+msgstr "Malli:"
+
+#: panel/controls_dialog.c:310 panel/item_dialog.c:545
+msgid "Position:"
+msgstr "Paikka:"
+
+#: panel/controls_dialog.c:351 panel/controls.c:265
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
@@ -24,110 +48,6 @@ msgstr ""
 "Osan poista poistoo myös ponnahdus valikon.\n"
 "\n"
 "Haluatko poistaa osan?"
-
-#: panel/controls.c:294 panel/panel.c:136
-msgid "/_Properties..."
-msgstr "/_Ominaisuudet..."
-
-#: panel/controls.c:295
-msgid "/_Remove"
-msgstr "/_Poista"
-
-#: panel/controls.c:297 panel/panel.c:134
-msgid "/Add _new item"
-msgstr "/_Lisää uusi osa"
-
-#: panel/controls.c:578
-msgid "This item has no configuration options"
-msgstr "Tällä osalla ei ole muokattavia ominaisuuksi"
-
-#: panel/controls_dialog.c:254
-msgid "Change item"
-msgstr "Muuta osaa"
-
-#: panel/controls_dialog.c:264 panel/item_dialog.c:916
-msgid "_Revert"
-msgstr "P_alauta"
-
-#: panel/controls_dialog.c:269 panel/item_dialog.c:922
-msgid "_Done"
-msgstr "_Valmis"
-
-#: panel/controls_dialog.c:292
-msgid "Type:"
-msgstr "Malli:"
-
-#: panel/controls_dialog.c:308 panel/item_dialog.c:545
-msgid "Position:"
-msgstr "Paikka:"
-
-#: panel/icons.c:69
-msgid "Default"
-msgstr "Oletus"
-
-#: panel/icons.c:70
-msgid "Editor"
-msgstr "Editori"
-
-#: panel/icons.c:71
-msgid "File management"
-msgstr "Tiedoston hallinta"
-
-#: panel/icons.c:72
-msgid "Utilities"
-msgstr "Sekalaiset"
-
-#: panel/icons.c:73
-msgid "Games"
-msgstr "Pelit"
-
-#: panel/icons.c:74
-msgid "Help browser"
-msgstr "Dokumentti selain"
-
-#: panel/icons.c:75
-msgid "Multimedia"
-msgstr "Multimedia"
-
-#: panel/icons.c:76
-msgid "Network"
-msgstr "Verkko"
-
-#: panel/icons.c:77
-msgid "Graphics"
-msgstr "Grafiikka"
-
-#: panel/icons.c:78
-msgid "Printer"
-msgstr "Tulostin"
-
-#: panel/icons.c:79
-msgid "Productivity"
-msgstr "Tuottavuus"
-
-#: panel/icons.c:80
-msgid "Sound"
-msgstr "Ääni"
-
-#: panel/icons.c:81
-msgid "Terminal"
-msgstr "Pääte"
-
-#: panel/item.c:337
-msgid "Click mouse button 3 to change item"
-msgstr "Paina hiiren 3-napilla vaihtaaksesi osan"
-
-#: panel/item.c:359
-msgid "Add launcher"
-msgstr "Lisää ynnistin"
-
-#: panel/item.c:363
-msgid "Add new item"
-msgstr "Lisää uusi osa"
-
-#: panel/item.c:490
-msgid "Launcher"
-msgstr "Käynnistin"
 
 #: panel/item_dialog.c:260
 msgid "Other Icon"
@@ -183,11 +103,27 @@ msgstr "Vaihda valikon osaa"
 msgid "Remove"
 msgstr "Poista"
 
-#: panel/main.c:93
+#: panel/item.c:337
+msgid "Click mouse button 3 to change item"
+msgstr "Paina hiiren 3-napilla vaihtaaksesi osan"
+
+#: panel/item.c:359
+msgid "Add launcher"
+msgstr "Lisää ynnistin"
+
+#: panel/item.c:363
+msgid "Add new item"
+msgstr "Lisää uusi osa"
+
+#: panel/item.c:490
+msgid "Launcher"
+msgstr "Käynnistin"
+
+#: panel/main.c:112
 msgid "Are you sure you want to exit?"
 msgstr "Haluatko lopettaa?"
 
-#: panel/main.c:201
+#: panel/main.c:252
 #, c-format
 msgid ""
 "%s, version %s\n"
@@ -198,7 +134,7 @@ msgstr ""
 "Osa XFce Työpöytäympäristöä\n"
 "http://www.xfce.org\n"
 
-#: panel/main.c:217
+#: panel/main.c:268
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
@@ -208,9 +144,21 @@ msgstr ""
 "määriteltyhttp://www.freedesktop.org.\n"
 "Jotkin XFce:n ominaisuudet eivät välttämättä toimi kuten on tarkoitus."
 
-#: panel/mcs_client.c:207
-msgid "Settings manager not available"
-msgstr "Asetus manageri ei ole saatavilla"
+#: panel/controls.c:294 panel/panel.c:136
+msgid "/_Properties..."
+msgstr "/_Ominaisuudet..."
+
+#: panel/controls.c:295
+msgid "/_Remove"
+msgstr "/_Poista"
+
+#: panel/controls.c:297 panel/panel.c:134
+msgid "/Add _new item"
+msgstr "/_Lisää uusi osa"
+
+#: panel/controls.c:578
+msgid "This item has no configuration options"
+msgstr "Tällä osalla ei ole muokattavia ominaisuuksi"
 
 #: panel/panel.c:132
 msgid "/XFce Panel"
@@ -236,18 +184,70 @@ msgstr "/_Lukitse näyttö"
 msgid "/E_xit"
 msgstr "/P_oistu"
 
-#: panel/panel.c:429 settings/xfce_settings_dialog.c:630
-#: settings/xfce_settings_plugin.c:75
+#: panel/panel.c:457 settings/xfce_settings_plugin.c:75
+#: settings/xfce_settings_dialog.c:630
 msgid "XFce Panel"
 msgstr "XFce Paneeli"
+
+#: panel/icons.c:71
+msgid "Default"
+msgstr "Oletus"
+
+#: panel/icons.c:72
+msgid "Editor"
+msgstr "Editori"
+
+#: panel/icons.c:73
+msgid "File management"
+msgstr "Tiedoston hallinta"
+
+#: panel/icons.c:74
+msgid "Utilities"
+msgstr "Sekalaiset"
+
+#: panel/icons.c:75
+msgid "Games"
+msgstr "Pelit"
+
+#: panel/icons.c:76
+msgid "Help browser"
+msgstr "Dokumentti selain"
+
+#: panel/icons.c:77
+msgid "Multimedia"
+msgstr "Multimedia"
+
+#: panel/icons.c:78
+msgid "Network"
+msgstr "Verkko"
+
+#: panel/icons.c:79
+msgid "Graphics"
+msgstr "Grafiikka"
+
+#: panel/icons.c:80
+msgid "Printer"
+msgstr "Tulostin"
+
+#: panel/icons.c:81
+msgid "Productivity"
+msgstr "Tuottavuus"
+
+#: panel/icons.c:82
+msgid "Sound"
+msgstr "Ääni"
+
+#: panel/icons.c:83
+msgid "Terminal"
+msgstr "Pääte"
+
+#: panel/mcs_client.c:207
+msgid "Settings manager not available"
+msgstr "Asetus manageri ei ole saatavilla"
 
 #: panel/popup.c:255
 msgid "Menu"
 msgstr "Valikko"
-
-#: panel/xfce_support.c:644
-msgid "Select file"
-msgstr "Valitse tiedosto"
 
 #: settings/xfce_settings_dialog.c:118
 msgid "Tiny"
@@ -463,26 +463,6 @@ msgstr "Näytä sekunnit:"
 msgid "Xfce Clock"
 msgstr "Xfce Kello"
 
-#: plugins/mailcheck/mailcheck.c:527
-msgid "Mail box:"
-msgstr "Postilaatikko:"
-
-#: plugins/mailcheck/mailcheck.c:619
-msgid "Mail command:"
-msgstr "Posti komento:"
-
-#: plugins/mailcheck/mailcheck.c:632
-msgid "Command to run when the button on the panel is clicked"
-msgstr "Komento joka ajetaan kun kuvaketta painetaan"
-
-#: plugins/mailcheck/mailcheck.c:705
-msgid "Interval (sec):"
-msgstr "Väli (sekunttia):"
-
-#: plugins/mailcheck/mailcheck.c:781
-msgid "Mail check"
-msgstr "Postin tarkistus"
-
 #: plugins/pager/pager.c:323
 #, fuzzy
 msgid "Graphical pager"
@@ -541,6 +521,26 @@ msgstr "Nappi 2:"
 #: plugins/systembuttons/systembuttons.c:667
 msgid "System buttons"
 msgstr "Järjestelmä napit"
+
+#: plugins/mailcheck/mailcheck.c:527
+msgid "Mail box:"
+msgstr "Postilaatikko:"
+
+#: plugins/mailcheck/mailcheck.c:619
+msgid "Mail command:"
+msgstr "Posti komento:"
+
+#: plugins/mailcheck/mailcheck.c:632
+msgid "Command to run when the button on the panel is clicked"
+msgstr "Komento joka ajetaan kun kuvaketta painetaan"
+
+#: plugins/mailcheck/mailcheck.c:705
+msgid "Interval (sec):"
+msgstr "Väli (sekunttia):"
+
+#: plugins/mailcheck/mailcheck.c:781
+msgid "Mail check"
+msgstr "Postin tarkistus"
 
 #~ msgid "XFce Desktop Environment"
 #~ msgstr "XFce Työpöytä Ympäristö"
