--- a/po/ja.po
+++ b/po/ja.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2003-04-13 23:15+0200\n"
+"POT-Creation-Date: 2003-04-18 23:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Zhao Ji <zhao-ji@awz.ne.jp>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,7 +15,31 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: panel/controls.c:265 panel/controls_dialog.c:349
+#: panel/xfce_support.c:644
+msgid "Select file"
+msgstr "ファイル選択"
+
+#: panel/controls_dialog.c:256
+msgid "Change item"
+msgstr "項目変更"
+
+#: panel/controls_dialog.c:266 panel/item_dialog.c:916
+msgid "_Revert"
+msgstr "元に戻す"
+
+#: panel/controls_dialog.c:271 panel/item_dialog.c:922
+msgid "_Done"
+msgstr "実行"
+
+#: panel/controls_dialog.c:294
+msgid "Type:"
+msgstr "タイプ:"
+
+#: panel/controls_dialog.c:310 panel/item_dialog.c:545
+msgid "Position:"
+msgstr "ポジション:"
+
+#: panel/controls_dialog.c:351 panel/controls.c:265
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
@@ -24,110 +48,6 @@ msgstr ""
 "ポップアップメニューの項目を削除します。\n"
 "\n"
 "このメニュー項目を削除してもよろしいですか？"
-
-#: panel/controls.c:294 panel/panel.c:136
-msgid "/_Properties..."
-msgstr "/プロパティ(_P)"
-
-#: panel/controls.c:295
-msgid "/_Remove"
-msgstr "/削除 (_R)"
-
-#: panel/controls.c:297 panel/panel.c:134
-msgid "/Add _new item"
-msgstr "/項目追加 (_n)"
-
-#: panel/controls.c:578
-msgid "This item has no configuration options"
-msgstr "この項目に、オプション設定は存在しません"
-
-#: panel/controls_dialog.c:254
-msgid "Change item"
-msgstr "項目変更"
-
-#: panel/controls_dialog.c:264 panel/item_dialog.c:916
-msgid "_Revert"
-msgstr "元に戻す"
-
-#: panel/controls_dialog.c:269 panel/item_dialog.c:922
-msgid "_Done"
-msgstr "実行"
-
-#: panel/controls_dialog.c:292
-msgid "Type:"
-msgstr "タイプ:"
-
-#: panel/controls_dialog.c:308 panel/item_dialog.c:545
-msgid "Position:"
-msgstr "ポジション:"
-
-#: panel/icons.c:69
-msgid "Default"
-msgstr "標準"
-
-#: panel/icons.c:70
-msgid "Editor"
-msgstr "エディタ"
-
-#: panel/icons.c:71
-msgid "File management"
-msgstr "ファイル操作"
-
-#: panel/icons.c:72
-msgid "Utilities"
-msgstr "ユーティリティ"
-
-#: panel/icons.c:73
-msgid "Games"
-msgstr "ゲーム"
-
-#: panel/icons.c:74
-msgid "Help browser"
-msgstr "ヘルプ ブラウザ"
-
-#: panel/icons.c:75
-msgid "Multimedia"
-msgstr "マルチメディア"
-
-#: panel/icons.c:76
-msgid "Network"
-msgstr "ネットワーク"
-
-#: panel/icons.c:77
-msgid "Graphics"
-msgstr "グラフィック"
-
-#: panel/icons.c:78
-msgid "Printer"
-msgstr "プリンタ"
-
-#: panel/icons.c:79
-msgid "Productivity"
-msgstr "プロダクト"
-
-#: panel/icons.c:80
-msgid "Sound"
-msgstr "サウンド"
-
-#: panel/icons.c:81
-msgid "Terminal"
-msgstr "ターミナル"
-
-#: panel/item.c:337
-msgid "Click mouse button 3 to change item"
-msgstr "項目変更するために、マウスの右ボタンをクリックして下さい"
-
-#: panel/item.c:359
-msgid "Add launcher"
-msgstr "ランチャ追加"
-
-#: panel/item.c:363
-msgid "Add new item"
-msgstr "項目追加"
-
-#: panel/item.c:490
-msgid "Launcher"
-msgstr "ランチャ"
 
 #: panel/item_dialog.c:260
 msgid "Other Icon"
@@ -183,11 +103,27 @@ msgstr "メニュー項目の変更"
 msgid "Remove"
 msgstr "削除"
 
-#: panel/main.c:93
+#: panel/item.c:337
+msgid "Click mouse button 3 to change item"
+msgstr "項目変更するために、マウスの右ボタンをクリックして下さい"
+
+#: panel/item.c:359
+msgid "Add launcher"
+msgstr "ランチャ追加"
+
+#: panel/item.c:363
+msgid "Add new item"
+msgstr "項目追加"
+
+#: panel/item.c:490
+msgid "Launcher"
+msgstr "ランチャ"
+
+#: panel/main.c:112
 msgid "Are you sure you want to exit?"
 msgstr "本当に終了してもいいですか？"
 
-#: panel/main.c:201
+#: panel/main.c:252
 #, c-format
 msgid ""
 "%s, version %s\n"
@@ -195,7 +131,7 @@ msgid ""
 "http://www.xfce.org\n"
 msgstr ""
 
-#: panel/main.c:217
+#: panel/main.c:268
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
@@ -205,9 +141,21 @@ msgstr ""
 "ヒントをサポートしていません。\n"
 "XFceの特徴は、いくつか意図する通りに動かないかもしれません。"
 
-#: panel/mcs_client.c:207
-msgid "Settings manager not available"
-msgstr "設定マネージャが利用不可能です"
+#: panel/controls.c:294 panel/panel.c:136
+msgid "/_Properties..."
+msgstr "/プロパティ(_P)"
+
+#: panel/controls.c:295
+msgid "/_Remove"
+msgstr "/削除 (_R)"
+
+#: panel/controls.c:297 panel/panel.c:134
+msgid "/Add _new item"
+msgstr "/項目追加 (_n)"
+
+#: panel/controls.c:578
+msgid "This item has no configuration options"
+msgstr "この項目に、オプション設定は存在しません"
 
 #: panel/panel.c:132
 msgid "/XFce Panel"
@@ -233,18 +181,70 @@ msgstr "/画面ロック (_L)"
 msgid "/E_xit"
 msgstr "/終了 (_x)"
 
-#: panel/panel.c:429 settings/xfce_settings_dialog.c:630
-#: settings/xfce_settings_plugin.c:75
+#: panel/panel.c:457 settings/xfce_settings_plugin.c:75
+#: settings/xfce_settings_dialog.c:630
 msgid "XFce Panel"
 msgstr "XFceパネル"
+
+#: panel/icons.c:71
+msgid "Default"
+msgstr "標準"
+
+#: panel/icons.c:72
+msgid "Editor"
+msgstr "エディタ"
+
+#: panel/icons.c:73
+msgid "File management"
+msgstr "ファイル操作"
+
+#: panel/icons.c:74
+msgid "Utilities"
+msgstr "ユーティリティ"
+
+#: panel/icons.c:75
+msgid "Games"
+msgstr "ゲーム"
+
+#: panel/icons.c:76
+msgid "Help browser"
+msgstr "ヘルプ ブラウザ"
+
+#: panel/icons.c:77
+msgid "Multimedia"
+msgstr "マルチメディア"
+
+#: panel/icons.c:78
+msgid "Network"
+msgstr "ネットワーク"
+
+#: panel/icons.c:79
+msgid "Graphics"
+msgstr "グラフィック"
+
+#: panel/icons.c:80
+msgid "Printer"
+msgstr "プリンタ"
+
+#: panel/icons.c:81
+msgid "Productivity"
+msgstr "プロダクト"
+
+#: panel/icons.c:82
+msgid "Sound"
+msgstr "サウンド"
+
+#: panel/icons.c:83
+msgid "Terminal"
+msgstr "ターミナル"
+
+#: panel/mcs_client.c:207
+msgid "Settings manager not available"
+msgstr "設定マネージャが利用不可能です"
 
 #: panel/popup.c:255
 msgid "Menu"
 msgstr "メニュー"
-
-#: panel/xfce_support.c:644
-msgid "Select file"
-msgstr "ファイル選択"
 
 #: settings/xfce_settings_dialog.c:118
 msgid "Tiny"
@@ -459,26 +459,6 @@ msgstr "秒表示:"
 msgid "Xfce Clock"
 msgstr "XFce時計"
 
-#: plugins/mailcheck/mailcheck.c:527
-msgid "Mail box:"
-msgstr "メール受信箱:"
-
-#: plugins/mailcheck/mailcheck.c:619
-msgid "Mail command:"
-msgstr "メール コマンド:"
-
-#: plugins/mailcheck/mailcheck.c:632
-msgid "Command to run when the button on the panel is clicked"
-msgstr "ボタンを押されると、実行されるコマンド"
-
-#: plugins/mailcheck/mailcheck.c:705
-msgid "Interval (sec):"
-msgstr "間隔 (sec):"
-
-#: plugins/mailcheck/mailcheck.c:781
-msgid "Mail check"
-msgstr "メール確認"
-
 #: plugins/pager/pager.c:323
 msgid "Graphical pager"
 msgstr "グラフィカル・ページャ"
@@ -536,3 +516,23 @@ msgstr "ボタン２:"
 #: plugins/systembuttons/systembuttons.c:667
 msgid "System buttons"
 msgstr "システム・ボタン"
+
+#: plugins/mailcheck/mailcheck.c:527
+msgid "Mail box:"
+msgstr "メール受信箱:"
+
+#: plugins/mailcheck/mailcheck.c:619
+msgid "Mail command:"
+msgstr "メール コマンド:"
+
+#: plugins/mailcheck/mailcheck.c:632
+msgid "Command to run when the button on the panel is clicked"
+msgstr "ボタンを押されると、実行されるコマンド"
+
+#: plugins/mailcheck/mailcheck.c:705
+msgid "Interval (sec):"
+msgstr "間隔 (sec):"
+
+#: plugins/mailcheck/mailcheck.c:781
+msgid "Mail check"
+msgstr "メール確認"
