--- a/po/de.po
+++ b/po/de.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
-"POT-Creation-Date: 2003-04-13 23:15+0200\n"
+"POT-Creation-Date: 2003-04-18 23:12+0200\n"
 "PO-Revision-Date: 2003-03-28 11:18+0100\n"
 "Last-Translator: Moritz Heiber <mistermoe@hackerboard.de>\n"
 "Language-Team: none <none@none>\n"
@@ -14,7 +14,31 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: panel/controls.c:265 panel/controls_dialog.c:349
+#: panel/xfce_support.c:644
+msgid "Select file"
+msgstr "Datei auswählen"
+
+#: panel/controls_dialog.c:256
+msgid "Change item"
+msgstr "Objekt verändern"
+
+#: panel/controls_dialog.c:266 panel/item_dialog.c:916
+msgid "_Revert"
+msgstr "Rückgängig"
+
+#: panel/controls_dialog.c:271 panel/item_dialog.c:922
+msgid "_Done"
+msgstr "_Fertig"
+
+#: panel/controls_dialog.c:294
+msgid "Type:"
+msgstr "Typ:"
+
+#: panel/controls_dialog.c:310 panel/item_dialog.c:545
+msgid "Position:"
+msgstr "Position:"
+
+#: panel/controls_dialog.c:351 panel/controls.c:265
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
@@ -23,111 +47,6 @@ msgstr ""
 "Das Entfernen eines Objektes entfernt auch sein Popup Menü.\n"
 "\n"
 "Wollen sie das Objekt entfernen?"
-
-#: panel/controls.c:294 panel/panel.c:136
-msgid "/_Properties..."
-msgstr "/_Eigenschaften..."
-
-#: panel/controls.c:295
-msgid "/_Remove"
-msgstr "/_Entfernen"
-
-#: panel/controls.c:297 panel/panel.c:134
-msgid "/Add _new item"
-msgstr "/Neues Objekt hinzufügen"
-
-#: panel/controls.c:578
-msgid "This item has no configuration options"
-msgstr "Dieses Objekt hat keine Konfigurationsoptionen"
-
-#: panel/controls_dialog.c:254
-msgid "Change item"
-msgstr "Objekt verändern"
-
-#: panel/controls_dialog.c:264 panel/item_dialog.c:916
-msgid "_Revert"
-msgstr "Rückgängig"
-
-#: panel/controls_dialog.c:269 panel/item_dialog.c:922
-msgid "_Done"
-msgstr "_Fertig"
-
-#: panel/controls_dialog.c:292
-msgid "Type:"
-msgstr "Typ:"
-
-#: panel/controls_dialog.c:308 panel/item_dialog.c:545
-msgid "Position:"
-msgstr "Position:"
-
-#: panel/icons.c:69
-msgid "Default"
-msgstr "Default"
-
-#: panel/icons.c:70
-msgid "Editor"
-msgstr "Editor"
-
-#: panel/icons.c:71
-msgid "File management"
-msgstr "Dateimanagement"
-
-#: panel/icons.c:72
-msgid "Utilities"
-msgstr "Utilities"
-
-#: panel/icons.c:73
-msgid "Games"
-msgstr "Spiele"
-
-#: panel/icons.c:74
-msgid "Help browser"
-msgstr "Hilfe"
-
-#: panel/icons.c:75
-msgid "Multimedia"
-msgstr "Multimedia"
-
-#: panel/icons.c:76
-msgid "Network"
-msgstr "Netzwerk"
-
-#: panel/icons.c:77
-msgid "Graphics"
-msgstr "Grafik"
-
-#: panel/icons.c:78
-msgid "Printer"
-msgstr "Drucker"
-
-#: panel/icons.c:79
-#, fuzzy
-msgid "Productivity"
-msgstr "Produktivität"
-
-#: panel/icons.c:80
-msgid "Sound"
-msgstr "Sound"
-
-#: panel/icons.c:81
-msgid "Terminal"
-msgstr "Terminal"
-
-#: panel/item.c:337
-msgid "Click mouse button 3 to change item"
-msgstr "Maustaste 3 zum verändern des Objekts benutzen"
-
-#: panel/item.c:359
-msgid "Add launcher"
-msgstr "Starter hinzufügen"
-
-#: panel/item.c:363
-msgid "Add new item"
-msgstr "Neues Objekt hinzufügen"
-
-#: panel/item.c:490
-msgid "Launcher"
-msgstr "Starter"
 
 #: panel/item_dialog.c:260
 msgid "Other Icon"
@@ -183,11 +102,27 @@ msgstr "Menüobjekt verändern"
 msgid "Remove"
 msgstr "Entfernen"
 
-#: panel/main.c:93
+#: panel/item.c:337
+msgid "Click mouse button 3 to change item"
+msgstr "Maustaste 3 zum verändern des Objekts benutzen"
+
+#: panel/item.c:359
+msgid "Add launcher"
+msgstr "Starter hinzufügen"
+
+#: panel/item.c:363
+msgid "Add new item"
+msgstr "Neues Objekt hinzufügen"
+
+#: panel/item.c:490
+msgid "Launcher"
+msgstr "Starter"
+
+#: panel/main.c:112
 msgid "Are you sure you want to exit?"
 msgstr "Sind sie sicher, das sie XFce beenden wollen?"
 
-#: panel/main.c:201
+#: panel/main.c:252
 #, c-format
 msgid ""
 "%s, version %s\n"
@@ -198,7 +133,7 @@ msgstr ""
 "Teil der XFce Desktop Umgebung\n"
 "http://www.xfce.org\n"
 
-#: panel/main.c:217
+#: panel/main.c:268
 msgid ""
 "Your window manager does not seem to support the new window manager hints as "
 "defined on http://www.freedesktop.org. \n"
@@ -208,9 +143,21 @@ msgstr ""
 "http://www.freedesktop.org definiert sind, zu unterstützen. \n"
 "Einige Funktionen von XFce könnten nicht wie erwartetet arbeiten"
 
-#: panel/mcs_client.c:207
-msgid "Settings manager not available"
-msgstr "Einstellungsmanager nicht verfügbar"
+#: panel/controls.c:294 panel/panel.c:136
+msgid "/_Properties..."
+msgstr "/_Eigenschaften..."
+
+#: panel/controls.c:295
+msgid "/_Remove"
+msgstr "/_Entfernen"
+
+#: panel/controls.c:297 panel/panel.c:134
+msgid "/Add _new item"
+msgstr "/Neues Objekt hinzufügen"
+
+#: panel/controls.c:578
+msgid "This item has no configuration options"
+msgstr "Dieses Objekt hat keine Konfigurationsoptionen"
 
 #: panel/panel.c:132
 msgid "/XFce Panel"
@@ -236,18 +183,71 @@ msgstr "/_Desktop sperren"
 msgid "/E_xit"
 msgstr "/B_eenden"
 
-#: panel/panel.c:429 settings/xfce_settings_dialog.c:630
-#: settings/xfce_settings_plugin.c:75
+#: panel/panel.c:457 settings/xfce_settings_plugin.c:75
+#: settings/xfce_settings_dialog.c:630
 msgid "XFce Panel"
 msgstr "XFce Panel"
+
+#: panel/icons.c:71
+msgid "Default"
+msgstr "Default"
+
+#: panel/icons.c:72
+msgid "Editor"
+msgstr "Editor"
+
+#: panel/icons.c:73
+msgid "File management"
+msgstr "Dateimanagement"
+
+#: panel/icons.c:74
+msgid "Utilities"
+msgstr "Utilities"
+
+#: panel/icons.c:75
+msgid "Games"
+msgstr "Spiele"
+
+#: panel/icons.c:76
+msgid "Help browser"
+msgstr "Hilfe"
+
+#: panel/icons.c:77
+msgid "Multimedia"
+msgstr "Multimedia"
+
+#: panel/icons.c:78
+msgid "Network"
+msgstr "Netzwerk"
+
+#: panel/icons.c:79
+msgid "Graphics"
+msgstr "Grafik"
+
+#: panel/icons.c:80
+msgid "Printer"
+msgstr "Drucker"
+
+#: panel/icons.c:81
+#, fuzzy
+msgid "Productivity"
+msgstr "Produktivität"
+
+#: panel/icons.c:82
+msgid "Sound"
+msgstr "Sound"
+
+#: panel/icons.c:83
+msgid "Terminal"
+msgstr "Terminal"
+
+#: panel/mcs_client.c:207
+msgid "Settings manager not available"
+msgstr "Einstellungsmanager nicht verfügbar"
 
 #: panel/popup.c:255
 msgid "Menu"
 msgstr "Menü"
-
-#: panel/xfce_support.c:644
-msgid "Select file"
-msgstr "Datei auswählen"
 
 #: settings/xfce_settings_dialog.c:118
 msgid "Tiny"
@@ -464,26 +464,6 @@ msgstr "Sekunden anzeigen:"
 msgid "Xfce Clock"
 msgstr "XFce Uhr"
 
-#: plugins/mailcheck/mailcheck.c:527
-msgid "Mail box:"
-msgstr "Mailbox"
-
-#: plugins/mailcheck/mailcheck.c:619
-msgid "Mail command:"
-msgstr "Mailkommando"
-
-#: plugins/mailcheck/mailcheck.c:632
-msgid "Command to run when the button on the panel is clicked"
-msgstr "Kommando, welches beim Klicken auf das Panel ausgeführt wird"
-
-#: plugins/mailcheck/mailcheck.c:705
-msgid "Interval (sec):"
-msgstr "Intervall (sek):"
-
-#: plugins/mailcheck/mailcheck.c:781
-msgid "Mail check"
-msgstr "Mailcheck"
-
 #: plugins/pager/pager.c:323
 #, fuzzy
 msgid "Graphical pager"
@@ -542,6 +522,26 @@ msgstr "Button 2:"
 #: plugins/systembuttons/systembuttons.c:667
 msgid "System buttons"
 msgstr "Systembuttons"
+
+#: plugins/mailcheck/mailcheck.c:527
+msgid "Mail box:"
+msgstr "Mailbox"
+
+#: plugins/mailcheck/mailcheck.c:619
+msgid "Mail command:"
+msgstr "Mailkommando"
+
+#: plugins/mailcheck/mailcheck.c:632
+msgid "Command to run when the button on the panel is clicked"
+msgstr "Kommando, welches beim Klicken auf das Panel ausgeführt wird"
+
+#: plugins/mailcheck/mailcheck.c:705
+msgid "Interval (sec):"
+msgstr "Intervall (sek):"
+
+#: plugins/mailcheck/mailcheck.c:781
+msgid "Mail check"
+msgstr "Mailcheck"
 
 #~ msgid "Credits"
 #~ msgstr "Credits"
