Its now possible to write panel plugins outside the panel. See the NOTES file for details and enjoy writing new panel plugins.
(Old svn revision: 3642)

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Martin Loschwitz <madkiss@users.sourceforge.net>
 Xavier Maillard <zedek@fxgsproject.org>
 Michael Mosier <michael@spyonit.com>
 Erik Touve <etouve@earthlink.net>
+Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
