German translation. Provided by Moritz Heiber.
(Old svn revision: 3646)

--- a/po/de.po
+++ b/po/de.po
@@ -325,7 +325,7 @@ msgstr "Setzen"
 
 #: settings/xfce_settings_dialog.c:584
 msgid "Autohide:"
-msgstr ""
+msgstr "Autom. Ausblenden:"
 
 #: settings/xfce_settings_dialog.c:643
 msgid "XFce Panel Settings"
@@ -344,7 +344,7 @@ msgstr "Position"
 #. autohide
 #: settings/xfce_settings_dialog.c:692
 msgid "Behaviour"
-msgstr ""
+msgstr "Verhalten"
 
 #: plugins/clock/clock.c:59
 msgid "Sunday"
